--- a/index.html
+++ b/index.html
@@ -90,11 +90,15 @@
 			<h2>INSPIRATION</h2>
 			<p>Learn more about the latest inter-planetary travel trends with our monthly email newsletter</p>
 			<form id="form" action="https://www.freecodecamp.com/email-submit" target="_blank">
-				<input type="email" id="email" name="email" placeholder="Enter your email" required>
+				<input type="email" id="email" name="email" placeholder="Enter your email..." required>
 				<input type="submit" id="submit" value="SIGN UP">
 			</form>
 		</section>
 	</main>
+
+	<footer>
+		
+	</footer>
 
 	<script src="script.js"></script>
 </body>
