adding img alt attribute and removing deprecated iframe frameborder attribute

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header id="header">
 		<nav id="nav-bar">
 			<ul>
-				<li class="logo"><img src="https://i.imgur.com/tXL9bIw.png" id="header-img"></li>
+				<li class="logo"><img src="https://i.imgur.com/tXL9bIw.png" id="header-img" alt="SIG logo"></li>
 				<li class="nav-link"><a href="#about">About</a></li>
 				<li class="nav-link"><a href="#policies">Policies</a></li>
 				<li class="nav-link"><a href="#inspiration">Inspiration</a></li>
@@ -28,7 +28,7 @@
 			<p>Space Insurance Group have been providing specialist insurance products for space tourists since 2024. Whether you're planning a once in a lifetime trip or are a regular traveller, SIG have a product to suit your needs.</p>
 
 			<div id="video_wrapper">
-				<iframe id="video" width="560" height="315" src="https://www.youtube-nocookie.com/embed/GrP3jHuLQ9o?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe id="video" width="560" height="315" src="https://www.youtube-nocookie.com/embed/GrP3jHuLQ9o?controls=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</section>
 
