updating nav-link html to pass FCC test

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 		<nav id="nav-bar">
 			<ul>
 				<li class="logo"><img src="https://i.imgur.com/tXL9bIw.png" id="header-img" alt="SIG logo"></li>
-				<li class="nav-link"><a href="#about">About</a></li>
-				<li class="nav-link"><a href="#policies">Policies</a></li>
-				<li class="nav-link"><a href="#inspiration">Inspiration</a></li>
+				<li><a href="#about" class="nav-link">About</a></li>
+				<li><a href="#policies" class="nav-link">Policies</a></li>
+				<li><a href="#inspiration" class="nav-link">Inspiration</a></li>
 			</ul>
 		</nav>	
 	</header>
 
 	<main>
-		<section>
-			<h2 id="about">ABOUT</h2>
+		<section id="about">
+			<h2>ABOUT</h2>
 			<p>If you’re planning a trip to space and the unexpected happens, insurance cover could protect you from significant costs and medical bills. No one wants to be thinking of accidents or incidents while they’re in space, but if the worst does happen, the right policy can be indispensable.</p>
 
 			<p>Space Insurance Group have been providing specialist insurance products for space tourists since 2024. Whether you're planning a once in a lifetime trip or are a regular traveller, SIG have a product to suit your needs.</p>
@@ -32,8 +32,8 @@
 			</div>
 		</section>
 
-		<section>
-			<h2 id="policies">POLICIES</h2>
+		<section id="policies">
+			<h2>POLICIES</h2>
 
 			<div class="pricing-grid">
 				<div class="plan plan1">
@@ -74,8 +74,8 @@
     	</div>
 		</section>
 
-		<section>
-			<h2 id="inspiration">INSPIRATION</h2>
+		<section id="inspiration">
+			<h2>INSPIRATION</h2>
 			<p>Learn more about the latest inter-planetary travel trends with our monthly email newsletter</p>
 			<form id="form" action="https://www.freecodecamp.com/email-submit" target="_blank">
 				<input type="email" id="email" name="email" placeholder="Enter your email..." required>
